Structure for features pages

--- a/netbeans.apache.org/src/content/download/nb113/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb113/index.asciidoc
@@ -91,5 +91,17 @@ Other enhancements in the Java area.
 
 - link:https://openjdk.java.net/jeps/330[JEP 330]: Launch Single-File Source-Code Programs -- single Java source files can be created, outside of projects, in the Favorites window, and they can be run and debugged, if NetBeans is running on JDK 11 or later.
  
+- link:https://openjdk.java.net/jeps/355[JEP 355]: Text Blocks (Preview) -- in addition to the features introduced in previous 11.x releases, a new Java editor hint has been introduced for reverting from Text Block to String. 
+
+=== Java EE
+
+=== Java Build Systems
+
+=== Frontend Development
+
+=== Appearance
+
+=== Miscellaneous
+
 
 
