--- a/netbeans.apache.org/src/content/download/nb113/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb113/index.asciidoc
@@ -91,11 +91,19 @@ Other enhancements in the Java area.
 
 - link:https://openjdk.java.net/jeps/330[JEP 330]: Launch Single-File Source-Code Programs -- single Java source files can be created, outside of projects, in the Favorites window, and they can be run and debugged, if NetBeans is running on JDK 11 or later.
  
-- link:https://openjdk.java.net/jeps/355[JEP 355]: Text Blocks (Preview) -- in addition to the features introduced in previous 11.x releases, a new Java editor hint has been introduced for reverting from Text Block to String. 
+- link:https://openjdk.java.net/jeps/355[JEP 355]: Text Blocks (Preview) -- in addition to the Text Block features introduced to the Java Editor in previous 11.x releases, a new Java editor hint has been introduced in 11.3 for reverting from Text Block to String. 
 
 === Java EE
 
+In addition to the initial integration of Java EE features into Apache NetBeans in 11.1, JSF 2.3 is not supported for the first time. For example, code completion for "f:websocket" is now supported.
+
+TIP: Currently, Apache NetBeans supports Java EE, though not yet Jakarta EE. The Jakarta EE APIs are identical to Java EE 8, though there are new JARs that are now packaged under Eclipse Foundation and all APIs have been slightly renamed. Apache NetBeans 12.0 is targeted for the integration of Jakarta EE 8 support.   
+
 === Java Build Systems
+
+==== Maven
+
+==== Gradle
 
 === Frontend Development
 
