--- a/netbeans.apache.org/src/content/download/nb113/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb113/index.asciidoc
@@ -102,15 +102,35 @@ In addition to the initial integration of Java EE features into Apache NetBeans 
 image::jsf-23-websocket.png[role="left", link="jsf-23-websocket.png"]
 -- 
 
-TIP: Currently, Apache NetBeans supports Java EE, though not yet Jakarta EE. The Jakarta EE APIs are identical to Java EE 8, though there are new JARs that are now packaged under Eclipse Foundation and all APIs have been slightly renamed. Apache NetBeans 12.0 is targeted for the integration of Jakarta EE 8 support.   
+TIP: Currently, Apache NetBeans supports Java EE, though not yet Jakarta EE. The Jakarta EE APIs are identical to Java EE 8, though there are new JARs that are now packaged under the Eclipse Foundation and all APIs have been slightly renamed. Apache NetBeans 12.0 is targeted for the integration of Jakarta EE 8 support.   
+
+== Enhancements and Fixes
 
 === Java Build Systems
 
-==== Maven
-
 ==== Gradle
 
-=== Frontend Development
+- Upgraded Gradle Tooling API  to 6.0.
+
+- Added Support for Custom Gradle Home.
+
+- Added Support for Gradle Composite Projects.
+
+- Recognize Kotlin based Gradle Projects.
+
+- Gradle Project can be Reloaded Forcibly.
+
+==== Maven
+
+- In the Options window, under Java/Maven, the default JDK can be set, for the first time, for all Maven projects.
+
+=== PHP, JavaScript, and HTML
+
+- Chrome connector connection with NetBeans has been fixed.
+
+- Prioritize "--standard" parameter of the path of Code Sniffer.
+
+- Autocomplete for PHP property and method without $this→
 
 === Appearance
 
