--- a/netbeans.apache.org/src/content/download/nb113/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb113/index.asciidoc
@@ -104,6 +104,10 @@ image::jsf-23-websocket.png[role="left", link="jsf-23-websocket.png"]
 
 TIP: Currently, Apache NetBeans supports Java EE, though not yet Jakarta EE. The Jakarta EE APIs are identical to Java EE 8, though there are new JARs that are now packaged under the Eclipse Foundation and all APIs have been slightly renamed. Apache NetBeans 12.0 is targeted for the integration of Jakarta EE 8 support.   
 
+=== Appearance
+
+A strong focus of the 11.3 release is around appearance, since the NetBeans dark look and feel support has been donated by Oracle to Apache, while FlatLaf, a completely new look and feel has been donated and integrated by Karl Tauber from FormDev Software GmbH, and enhancements for HiDPI on Windows has also been introduced.
+
 == Enhancements and Fixes
 
 === Java Build Systems
@@ -131,8 +135,6 @@ TIP: Currently, Apache NetBeans supports Java EE, though not yet Jakarta EE. The
 - Prioritize "--standard" parameter of the path of Code Sniffer.
 
 - Autocomplete for PHP property and method without $this→
-
-=== Appearance
 
 === Miscellaneous
 
