--- a/netbeans.apache.org/src/content/download/nb113/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb113/index.asciidoc
@@ -95,11 +95,18 @@ Other enhancements in the Java area.
 
 === Java EE
 
-In addition to the initial integration of Java EE features into Apache NetBeans in 11.1, JSF 2.3 is not supported for the first time. For example, code completion for "f:websocket" is now supported, as shown below.
+In addition to the initial integration of Java EE features into Apache NetBeans in 11.1, JSF 2.3 is now supported for the first time. For example, code completion for "f:websocket" is now supported, as shown below.
 
 [.feature]
 --
 image::jsf-23-websocket.png[role="left", link="jsf-23-websocket.png"]
+-- 
+
+Also, you can take advantage of the ability to inject JSF artifacts with support for JSF 2.3, i.e., support for CDI changes for JSF artifact injection.
+
+[.feature]
+--
+image::cdi-inject.png[role="left", link="cdi-inject.png"]
 -- 
 
 TIP: Currently, Apache NetBeans supports Java EE, though not yet Jakarta EE. The Jakarta EE APIs are identical to Java EE 8, though there are new JARs that are now packaged under the Eclipse Foundation and all APIs have been slightly renamed. Apache NetBeans 12.0 is targeted for the integration of Jakarta EE 8 support.   
