--- a/netbeans.apache.org/src/content/download/nb112/nb112.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb112/nb112.asciidoc
@@ -75,7 +75,7 @@ Apache NetBeans can also be installed as a self-contained link:https://snapcraft
 
 == Deployment platforms
 
-Apache NetBeans 11.2 runs on JDK 8, 11, and 13.  (JDK 13 is the current JDK release at the time of this NetBeans release).
+Apache NetBeans 11.2 runs on the JDK LTS releases 8 and 11, as well as on JDK 13, i.e., the current JDK release at the time of this NetBeans release.
 
 == Building from source
 
