--- a/netbeans.apache.org/src/content/download/nb111/nb111.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb111/nb111.asciidoc
@@ -77,7 +77,7 @@ Apache NetBeans can also be installed as a self-contained link:https://snapcraft
 
 == Deployment platforms
 
-Apache NetBeans 11.1 runs on JDK 8, 11, and 12.  (JDK 12 is the current JDK release at the time of this NetBeans release).
+Apache NetBeans 11.1 runs on JDK LTS releases 8 and 11, as well as on JDK 12, i.e., the current JDK release at the time of this NetBeans release.
 
 
 == Building from source
