adding repos to the list

--- a/netbeans.apache.org/src/content/download/dev/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/dev/index.asciidoc
@@ -56,8 +56,10 @@ Now that you have built Apache NetBeans from source you may want to link:/partic
 This is a list of Apache NetBeans repositories:
 
 - https://github.com/apache/netbeans The main source code repository.
+- https://github.com/apache/netbeans-l10n Translation bundle repository.
 - https://github.com/apache/netbeans-website This website's repository.
 - https://github.com/apache/netbeans-website-cleanup A repository used to clean up existing documentation from http://netbeans.org
+- https://github.com/apache/netbeans-tools Tools and facilities in support of the Apache NetBeans project.
 - Emilian Bold has converted the previous Mercurial repository (http://hg.netbeans.org) to git, for historical reference, and has kindly uploaded it to GitHub at https://github.com/emilianbold/netbeans-releases. Thanks, Emilian!
 
 
