--- a/netbeans.apache.org/src/content/download/nb113/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb113/index.asciidoc
@@ -35,6 +35,8 @@ Apache NetBeans 11.3 is the third Apache NetBeans release outside the Apache Inc
 
 TIP: The LTS release of the Apache NetBeans 11 cycle is Apache NetBeans 11.0. The 11.1, 11.2, and 11.3 releases have not been tested as heavily as the LTS release and may therefore be less stable. Use 11.3 to use the latest features and to provide feedback for the next LTS release, scheduled for April 2020. Go here to download  link:/download/nb110/nb110.html[Apache NetBeans 11.0], the current LTS release.
 
+Below are the highlights of Apache NetBeans 11.3, for a full list, see the link:https://cwiki.apache.org/confluence/display/NETBEANS/Apache+NetBeans+11.3[Apache NetBeans 11.3 Wiki].
+
 == Release Drivers
 
 === Java
@@ -144,6 +146,12 @@ A strong focus of the 11.3 release is around appearance, since the NetBeans dark
 - Autocomplete for PHP property and method without $this→
 
 === Miscellaneous
+
+=== Notes
+
+- The donation of the NetBeans C and C&#x2b;&#x2b; features from Oracle to Apache has been completed in the 11.3 timeframe, though the code has not yet been integrated. This is anticipated to be a large task and may take some time, involving not only license changes and IP clearance in Apache, though also potentially code changes since not everything that was part of these features in Oracle was able to be donated by Oracle to Apache. Until the code integration is complete, go to the Plugin Manager, enable the NetBeans IDE 8.2 Update Center, which lets you install the NetBeans IDE 8.2 modules providing C and C&#x2b;&#x2b; features.
+- WildFly integration is supported by means of the link:http://plugins.netbeans.org/plugin/76472/wildfly-application-server[WildFly Application Server] plugin located in the Plugin Portal.
+
 
 
 
