FlatLaf screenshots and HiDPI

--- a/netbeans.apache.org/src/content/download/nb113/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb113/index.asciidoc
@@ -115,7 +115,22 @@ TIP: Currently, Apache NetBeans supports Java EE, though not yet Jakarta EE. The
 
 === Appearance
 
-A strong focus of the 11.3 release is around appearance, since the NetBeans dark look and feel support has been donated by Oracle to Apache, while FlatLaf, a completely new look and feel has been donated and integrated by Karl Tauber from FormDev Software GmbH, and enhancements for HiDPI on Windows has also been introduced.
+A strong focus of the 11.3 release is around appearance, since the NetBeans dark look and feel support has been donated by Oracle to Apache, while FlatLaf, a completely new look and feel has been donated and integrated by Karl Tauber from FormDev Software GmbH, and enhancements for HiDPI on Windows have also been introduced.
+
+==== HiDPI
+
+image::FlatLafDark-11.3.png[role="left", link="FlatLafDark-11.3.png"]
+
+image::FlatLafLight-11.3.png[role="left", link="FlatLafLight-11.3.png"]
+
+==== HiDPI
+
+- Windows LAF: Fix tiny or huge GUI font size on various HiDPI configurations.
+- Windows LAF: Fix incorrectly sized component icons (radio buttons, checkboxes, project tree expansion handles etc.) on various HiDPI configurations.
+- Windows LAF: Fix uneven borders on text components on non-integral HiDPI scaling factors, e.g. 150%.
+- Windows: Fix broken tab dragging (window rearrangements) on HiDPI displays.
+- Make toolbar browser icon take advantage of improved HiDPI scaling.
+- Implement simplified HeapView widget.
 
 == Enhancements and Fixes
 
