--- a/netbeans.apache.org/src/content/download/nb113/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb113/index.asciidoc
@@ -119,9 +119,7 @@ A strong focus of the 11.3 release is around appearance, since the NetBeans dark
 
 ==== HiDPI
 
-image::FlatLafDark-11.3.png[role="left", link="FlatLafDark-11.3.png"]
-
-image::FlatLafLight-11.3.png[role="left", link="FlatLafLight-11.3.png"]
+image::FlatLaf-11.3.png[role="left", link="FlatLaf-11.3.png"]
 
 ==== HiDPI
 
