--- a/netbeans.apache.org/src/content/download/nb113/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb113/index.asciidoc
@@ -117,7 +117,7 @@ TIP: Currently, Apache NetBeans supports Java EE, though not yet Jakarta EE. The
 
 A strong focus of the 11.3 release is around appearance, since the NetBeans dark look and feel support has been donated by Oracle to Apache, while FlatLaf, a completely new look and feel has been donated and integrated by Karl Tauber from FormDev Software GmbH, and enhancements for HiDPI on Windows have also been introduced.
 
-==== HiDPI
+==== FlatLaf Look and Feel Support
 
 image::FlatLaf-11.3.png[role="left", link="FlatLaf-11.3.png"]
 
