--- a/netbeans.apache.org/src/content/download/nb113/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb113/index.asciidoc
@@ -152,6 +152,10 @@ image::FlatLaf-11.3.png[role="left", link="FlatLaf-11.3.png"]
 
 === PHP, JavaScript, and HTML
 
+- TypeScript Editor
+
+image::typescript-lsp-11.3.png[role="left", link="typescript-lsp-11.3.png"]
+
 - Chrome connector connection with NetBeans has been fixed.
 
 - Prioritize "--standard" parameter of the path of Code Sniffer.
