--- a/netbeans.apache.org/src/content/download/nb113/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb113/index.asciidoc
@@ -154,7 +154,7 @@ image::FlatLaf-11.3.png[role="left", link="FlatLaf-11.3.png"]
 
 - TypeScript Editor
 
-image::typescript-lsp-11.3.png[role="left", link="typescript-lsp-11.3.png"]
+image::typescript-11.3.png[role="left", link="typescript-11.3.png"]
 
 - Chrome connector connection with NetBeans has been fixed.
 
@@ -163,6 +163,9 @@ image::typescript-lsp-11.3.png[role="left", link="typescript-lsp-11.3.png"]
 - Autocomplete for PHP property and method without $this→
 
 === Miscellaneous
+
+- Cleaning up of many compiler warnings, for example, relating to linter warnings types of deprecation, rawtypes and unchecked.
+- Library updates, for example, to Groovy 2.5.9, junit 5.5.2, and GraalVM 19.3.0.
 
 === Notes
 
