--- a/netbeans.apache.org/src/content/download/nb113/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb113/index.asciidoc
@@ -115,11 +115,15 @@ TIP: Currently, Apache NetBeans supports Java EE, though not yet Jakarta EE. The
 
 === Appearance
 
-A strong focus of the 11.3 release is around appearance, since the NetBeans dark look and feel support has been donated by Oracle to Apache, while FlatLaf, a completely new look and feel has been donated and integrated by Karl Tauber from FormDev Software GmbH, and enhancements for HiDPI on Windows have also been introduced.
+A strong focus of the 11.3 release is around appearance, since the NetBeans dark look and feels support (Dark Metal and Dark Nimbus) has been donated by Oracle to Apache, while FlatLaf, a completely new look and feel link:https://www.formdev.com/flatlaf/[by  Karl Tauber from FormDev Software GmbH], has been integrated. Also, enhancements for HiDPI on Windows have been introduced.
 
 ==== FlatLaf Look and Feel Support
 
 image::FlatLaf-11.3.png[role="left", link="FlatLaf-11.3.png"]
+
+==== Dark Metal and Dark Nimbus Look and Feel Support
+
+image::dark-metal-nimbus-11.3.png[role="left", link="dark-metal-nimbus-11.3.png"]
 
 ==== HiDPI
 
