--- a/netbeans.apache.org/src/content/download/nb113/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb113/index.asciidoc
@@ -168,7 +168,7 @@ image::typescript-11.3.png[role="left", link="typescript-11.3.png"]
 
 === Miscellaneous
 
-- Cleaning up of many compiler warnings, for example, relating to linter warnings types of deprecation, rawtypes and unchecked.
+- Cleaning up many compiler warnings, for example, relating to linter warning types of deprecation, rawtypes, and unchecked.
 - Library updates, for example, to Groovy 2.5.9, junit 5.5.2, and GraalVM 19.3.0.
 
 === Notes
