--- a/netbeans.apache.org/src/content/download/nb113/nb113.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb113/nb113.asciidoc
@@ -35,3 +35,56 @@ for important requirements for download pages for Apache projects.
 
 Apache NetBeans 11.3 is not yet released.
 See link:/download/nb113/index.html[Apache NetBeans 11.3 Features] for a full list of features.
+
+////
+NOTE: It's mandatory to link to the source. It's optional to link to the binaries.
+NOTE: It's mandatory to link against https://www.apache.org for the sums & keys. https is recommended.
+NOTE: It's NOT recommended to link to github.
+////
+Apache NetBeans 11.3 is available for download from your closest Apache mirror.
+
+- Binaries: 
+link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.3/netbeans-11.3-bin.zip[netbeans-11.3-bin.zip] (
+link:https://www.apache.org/dist/netbeans/netbeans/11.3/netbeans-11.3-bin.zip.sha512[SHA-512],
+link:https://www.apache.org/dist/netbeans/netbeans/11.3/netbeans-11.3-bin.zip.asc[PGP ASC])
+
+- Source: link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.3/netbeans-11.3-source.zip[netbeans-11.3-source.zip] 
+(link:https://www.apache.org/dist/netbeans/netbeans/11.3/netbeans-11.3-source.zip.sha512[SHA-512],
+link:https://www.apache.org/dist/netbeans/netbeans/11.3/netbeans-11.3-source.zip.asc[PGP ASC])
+
+- Installers:
+ 
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.3/Apache-NetBeans-11.3-bin-windows-x64.exe[Apache-NetBeans-11.3-bin-windows-x64.exe] (
+link:https://www.apache.org/dist/netbeans/netbeans/11.3/Apache-NetBeans-11.3-bin-windows-x64.exe.sha512[SHA-512],
+link:https://www.apache.org/dist/netbeans/netbeans/11.3/Apache-NetBeans-11.3-bin-windows-x64.exe.asc[PGP ASC])
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.3/Apache-NetBeans-11.3-bin-linux-x64.sh[Apache-NetBeans-11.3-bin-linux-x64.sh] (
+link:https://www.apache.org/dist/netbeans/netbeans/11.3/Apache-NetBeans-11.3-bin-linux-x64.sh.sha512[SHA-512],
+link:https://www.apache.org/dist/netbeans/netbeans/11.3/Apache-NetBeans-11.3-bin-linux-x64.sh.asc[PGP ASC])
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.3/Apache-NetBeans-11.3-bin-macosx.dmg[Apache-NetBeans-11.3-bin-macosx.dmg] (
+link:https://www.apache.org/dist/netbeans/netbeans/11.3/Apache-NetBeans-11.3-bin-macosx.dmg.sha512[SHA-512],
+link:https://www.apache.org/dist/netbeans/netbeans/11.3/Apache-NetBeans-11.3-bin-macosx.dmg.asc[PGP ASC])
+
+////
+NOTE: Using https below is highly recommended.
+////
+Officially, it is important that you link:https://www.apache.org/dyn/closer.cgi#verify[verify the integrity]
+of the downloaded files using the PGP signatures (.asc file) or a hash (.sha512 files).
+The PGP signatures should be matched against the link:https://www.apache.org/dist/netbeans/KEYS[KEYS] file which contains the PGP keys used to sign this release.
+
+Apache NetBeans can also be installed as a self-contained link:https://snapcraft.io/netbeans[snap package] on Linux.
+
+== Deployment platforms
+
+Apache NetBeans 11.3 runs on the JDK LTS releases 8 and 11, as well as on JDK 14, i.e., the current JDK release at the time of this NetBeans release.
+
+== Community approval
+
+As in any other Apache Project, the Apache NetBeans Community approved this release
+through the following voting processes in our link:/community/mailing-lists.html[mailing lists] :
+
+- link:https://lists.apache.org/thread.html/r5328170c3961804d3ed15cb13267b73197d58c0fcbd522dd75c1b44b%40%3Cdev.netbeans.apache.org%3E[PMC vote]
+- link:https://lists.apache.org/thread.html/r7ea6e3350fb16e6ead3dfaa06dba2d4e9475b55296cee902ea70fa75%40%3Cdev.netbeans.apache.org%3E[PMC vote result]
+
+== Earlier releases
+
+Please visit the link:/download/index.html[Apache NetBeans Download page] for further details.
