Tweaks to download page

--- a/netbeans.apache.org/src/content/download/nb113/nb113.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb113/nb113.asciidoc
@@ -52,8 +52,9 @@ link:https://www.apache.org/dist/netbeans/netbeans/11.3/netbeans-11.3-bin.zip.as
 (link:https://www.apache.org/dist/netbeans/netbeans/11.3/netbeans-11.3-source.zip.sha512[SHA-512],
 link:https://www.apache.org/dist/netbeans/netbeans/11.3/netbeans-11.3-source.zip.asc[PGP ASC])
 
-- Installers:
+- Installers: Coming soon.
  
+//// 
 * link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.3/Apache-NetBeans-11.3-bin-windows-x64.exe[Apache-NetBeans-11.3-bin-windows-x64.exe] (
 link:https://www.apache.org/dist/netbeans/netbeans/11.3/Apache-NetBeans-11.3-bin-windows-x64.exe.sha512[SHA-512],
 link:https://www.apache.org/dist/netbeans/netbeans/11.3/Apache-NetBeans-11.3-bin-windows-x64.exe.asc[PGP ASC])
@@ -63,6 +64,7 @@ link:https://www.apache.org/dist/netbeans/netbeans/11.3/Apache-NetBeans-11.3-bin
 * link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.3/Apache-NetBeans-11.3-bin-macosx.dmg[Apache-NetBeans-11.3-bin-macosx.dmg] (
 link:https://www.apache.org/dist/netbeans/netbeans/11.3/Apache-NetBeans-11.3-bin-macosx.dmg.sha512[SHA-512],
 link:https://www.apache.org/dist/netbeans/netbeans/11.3/Apache-NetBeans-11.3-bin-macosx.dmg.asc[PGP ASC])
+////
 
 ////
 NOTE: Using https below is highly recommended.
@@ -80,7 +82,7 @@ Apache NetBeans 11.3 runs on the JDK LTS releases 8 and 11, as well as on JDK 14
 == Community approval
 
 As in any other Apache Project, the Apache NetBeans Community approved this release
-through the following voting processes in our link:/community/mailing-lists.html[mailing lists] :
+through the following voting processes in our link:/community/mailing-lists.html[mailing lists]:
 
 - link:https://lists.apache.org/thread.html/r5328170c3961804d3ed15cb13267b73197d58c0fcbd522dd75c1b44b%40%3Cdev.netbeans.apache.org%3E[PMC vote]
 - link:https://lists.apache.org/thread.html/r7ea6e3350fb16e6ead3dfaa06dba2d4e9475b55296cee902ea70fa75%40%3Cdev.netbeans.apache.org%3E[PMC vote result]
