--- a/netbeans.apache.org/src/content/download/nb113/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb113/index.asciidoc
@@ -172,6 +172,9 @@ image::typescript-11.3.png[role="left", link="typescript-11.3.png"]
 
 - Cleaning up many compiler warnings, for example, relating to linter warning types of deprecation, rawtypes, and unchecked.
 - Library updates, for example, to Groovy 2.5.9, junit 5.5.2, and GraalVM 19.3.0.
+- Janitor helps to identify and remove old and unused NetBeans user directories.
+
+image::janitor-11.3.png[role="left", link="janitor-11.3.png"]
 
 === Notes
 
