Making list of installers available

--- a/netbeans.apache.org/src/content/download/nb113/nb113.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb113/nb113.asciidoc
@@ -52,9 +52,8 @@ link:https://www.apache.org/dist/netbeans/netbeans/11.3/netbeans-11.3-bin.zip.as
 (link:https://www.apache.org/dist/netbeans/netbeans/11.3/netbeans-11.3-source.zip.sha512[SHA-512],
 link:https://www.apache.org/dist/netbeans/netbeans/11.3/netbeans-11.3-source.zip.asc[PGP ASC])
 
-- Installers: Coming soon.
- 
-//// 
+- Installers: 
+
 * link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.3/Apache-NetBeans-11.3-bin-windows-x64.exe[Apache-NetBeans-11.3-bin-windows-x64.exe] (
 link:https://www.apache.org/dist/netbeans/netbeans/11.3/Apache-NetBeans-11.3-bin-windows-x64.exe.sha512[SHA-512],
 link:https://www.apache.org/dist/netbeans/netbeans/11.3/Apache-NetBeans-11.3-bin-windows-x64.exe.asc[PGP ASC])
@@ -64,7 +63,6 @@ link:https://www.apache.org/dist/netbeans/netbeans/11.3/Apache-NetBeans-11.3-bin
 * link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.3/Apache-NetBeans-11.3-bin-macosx.dmg[Apache-NetBeans-11.3-bin-macosx.dmg] (
 link:https://www.apache.org/dist/netbeans/netbeans/11.3/Apache-NetBeans-11.3-bin-macosx.dmg.sha512[SHA-512],
 link:https://www.apache.org/dist/netbeans/netbeans/11.3/Apache-NetBeans-11.3-bin-macosx.dmg.asc[PGP ASC])
-////
 
 ////
 NOTE: Using https below is highly recommended.
