--- a/netbeans.apache.org/src/content/download/nb113/nb113.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb113/nb113.asciidoc
@@ -33,7 +33,7 @@ for important requirements for download pages for Apache projects.
 :toc-title:
 :icons: font
 
-Apache NetBeans 11.3 is not yet released.
+Apache NetBeans 11.3 was released on (date to be inserted here).
 See link:/download/nb113/index.html[Apache NetBeans 11.3 Features] for a full list of features.
 
 ////
