Banner move to 11.3, 11.2 move in archive

--- a/netbeans.apache.org/src/content/download/archive/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/archive/index.asciidoc
@@ -29,6 +29,12 @@
 Older Apache NetBeans releases and pre-Apache NetBeans releases can still be
 downloaded, but are no longer supported.
 
+== Apache NetBeans 11 feature update 2 (NB 11.2)
+
+Apache NetBeans 11.2 was released on October 25, 2019.
+
+link:/download/nb112/index.html[Features, role="button"] link:/download/nb112/nb112.html[Download, role="button success"]
+
 == Apache NetBeans 11 feature update 1 (NB 11.1)
 
 Apache NetBeans 11.1 was released on July 22, 2019.
