--- a/netbeans.apache.org/src/content/download/nb112/nb112.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb112/nb112.asciidoc
@@ -44,25 +44,25 @@ NOTE: It's NOT recommended to link to github.
 Apache NetBeans 11.2 is available for download from your closest Apache mirror.
 
 - Binaries: 
-link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.2/netbeans-11.2-bin.zip[netbeans-11.2-bin.zip] (
-link:https://www.apache.org/dist/netbeans/netbeans/11.2/netbeans-11.2-bin.zip.sha512[SHA-512],
-link:https://www.apache.org/dist/netbeans/netbeans/11.2/netbeans-11.2-bin.zip.asc[PGP ASC])
+link:https://archive.apache.org/dist/netbeans/netbeans/11.2/netbeans-11.2-bin.zip[netbeans-11.2-bin.zip] (
+link:https://archive.apache.org/dist/netbeans/netbeans/11.2/netbeans-11.2-bin.zip.sha512[SHA-512],
+link:https://archive.apache.org/dist/netbeans/netbeans/11.2/netbeans-11.2-bin.zip.asc[PGP ASC])
 
-- Source: link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.2/netbeans-11.2-source.zip[netbeans-11.2-source.zip] 
-(link:https://www.apache.org/dist/netbeans/netbeans/11.2/netbeans-11.2-source.zip.sha512[SHA-512],
-link:https://www.apache.org/dist/netbeans/netbeans/11.2/netbeans-11.2-source.zip.asc[PGP ASC])
+- Source: link:https://archive.apache.org/dist/netbeans/netbeans/11.2/netbeans-11.2-source.zip[netbeans-11.2-source.zip] 
+(link:https://archive.apache.org/dist/netbeans/netbeans/11.2/netbeans-11.2-source.zip.sha512[SHA-512],
+link:https://archive.apache.org/dist/netbeans/netbeans/11.2/netbeans-11.2-source.zip.asc[PGP ASC])
 
 - Installers:
  
-* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-windows-x64.exe[Apache-NetBeans-11.2-bin-windows-x64.exe] (
-link:https://www.apache.org/dist/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-windows-x64.exe.sha512[SHA-512],
-link:https://www.apache.org/dist/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-windows-x64.exe.asc[PGP ASC])
-* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-linux-x64.sh[Apache-NetBeans-11.2-bin-linux-x64.sh] (
-link:https://www.apache.org/dist/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-linux-x64.sh.sha512[SHA-512],
-link:https://www.apache.org/dist/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-linux-x64.sh.asc[PGP ASC])
-* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-macosx.dmg[Apache-NetBeans-11.2-bin-macosx.dmg] (
-link:https://www.apache.org/dist/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-macosx.dmg.sha512[SHA-512],
-link:https://www.apache.org/dist/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-macosx.dmg.asc[PGP ASC])
+* link:https://archive.apache.org/dist/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-windows-x64.exe[Apache-NetBeans-11.2-bin-windows-x64.exe] (
+link:https://archive.apache.org/dist/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-windows-x64.exe.sha512[SHA-512],
+link:https://archive.apache.org/dist/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-windows-x64.exe.asc[PGP ASC])
+* link:https://archive.apache.org/dist/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-linux-x64.sh[Apache-NetBeans-11.2-bin-linux-x64.sh] (
+link:https://archive.apache.org/dist/netbeans/11.2/Apache-NetBeans-11.2-bin-linux-x64.sh.sha512[SHA-512],
+link:https://archive.apache.org/dist/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-linux-x64.sh.asc[PGP ASC])
+* link:https://archive.apache.org/dist/closer.cgi/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-macosx.dmg[Apache-NetBeans-11.2-bin-macosx.dmg] (
+link:https://archive.apache.org/dist/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-macosx.dmg.sha512[SHA-512],
+link:https://archive.apache.org/dist/netbeans/netbeans/11.2/Apache-NetBeans-11.2-bin-macosx.dmg.asc[PGP ASC])
 
 ////
 NOTE: Using https below is highly recommended.
