--- a/netbeans.apache.org/src/content/download/dev/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/dev/index.asciidoc
@@ -37,7 +37,7 @@ Please visit link:https://builds.apache.org/job/netbeans-linux/[https://builds.a
 You can of course build Apache NetBeans from source. To do so:
 
 . Clone the https://github.com/apache/netbeans GitHub repository.
-. Install Oracle's Java or Open JDK (v8, v11).
+. Install an LTS release of the Java Development Kit.
 . Install Apache Ant 1.10 or greater (https://ant.apache.org/).
 . Set JAVA_HOME and ANT_HOME appropriately or leave them undefined.
 
