change asc/sha512 to new downloads.apache.org

--- a/netbeans.apache.org/src/content/download/maven/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/maven/index.asciidoc
@@ -81,7 +81,7 @@ If all mirrors are failing, there are <i>backup</i> mirrors (at the end of the m
 |===
 | | Links  | Checksum | Signature
 
-|Apache NetBeans parent pom 2 | link:++[preferred]netbeans/netbeans-parent/netbeans-parent-2/netbeans-parent-2-source-release.zip++[netbeans-parent-2-source-release.zip] | link:++https://www.apache.org/dist/netbeans/netbeans-parent/netbeans-parent-2/netbeans-parent-2-source-release.zip.sha512++[netbeans-parent-2-source-release.zip.sha512] | link:++https://www.apache.org/dist/netbeans/netbeans-parent/netbeans-parent-2/netbeans-parent-2-source-release.zip.asc++[netbeans-parent-2-source-release.zip.asc]
+|Apache NetBeans parent pom 2 | link:++[preferred]netbeans/netbeans-parent/netbeans-parent-2/netbeans-parent-2-source-release.zip++[netbeans-parent-2-source-release.zip] | link:++https://downloads.apache.org/netbeans/netbeans-parent/netbeans-parent-2/netbeans-parent-2-source-release.zip.sha512++[netbeans-parent-2-source-release.zip.sha512] | link:++https://downloads.apache.org/netbeans/netbeans-parent/netbeans-parent-2/netbeans-parent-2-source-release.zip.asc++[netbeans-parent-2-source-release.zip.asc]
 
 |===
 
