--- a/netbeans.apache.org/src/content/download/nb110/nb110.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb110/nb110.asciidoc
@@ -46,20 +46,20 @@ NOTE: It's NOT recommended to link to github.
 Apache NetBeans 11.0 is available for download from your closest Apache mirror. For this release no official installers are provided, please just download the binaries and unzip them.
 
 - Source: link:https://www.apache.org/dyn/closer.cgi/incubator/netbeans/incubating-netbeans/incubating-11.0/incubating-netbeans-11.0-source.zip[incubating-netbeans-11.0-source.zip] 
-(link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-11.0/incubating-netbeans-11.0-source.zip.sha512[SHA-512],
-link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-11.0/incubating-netbeans-11.0-source.zip.asc[PGP ASC])
+(link:https://downloads.apache.org/incubator/netbeans/incubating-netbeans/incubating-11.0/incubating-netbeans-11.0-source.zip.sha512[SHA-512],
+link:https://downloads.apache.org/incubator/netbeans/incubating-netbeans/incubating-11.0/incubating-netbeans-11.0-source.zip.asc[PGP ASC])
 
 - Binaries: 
 link:https://www.apache.org/dyn/closer.cgi/incubator/netbeans/incubating-netbeans/incubating-11.0/incubating-netbeans-11.0-bin.zip[incubating-netbeans-11.0-bin.zip] (
-link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-11.0/incubating-netbeans-11.0-bin.zip.sha512[SHA-512],
-link:https://www.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-11.0/incubating-netbeans-11.0-bin.zip.asc[PGP ASC])
+link:https://downloads.apache.org/incubator/netbeans/incubating-netbeans/incubating-11.0/incubating-netbeans-11.0-bin.zip.sha512[SHA-512],
+link:https://downloads.apache.org/incubator/netbeans/incubating-netbeans/incubating-11.0/incubating-netbeans-11.0-bin.zip.asc[PGP ASC])
 
 - Javadoc for this release is available at https://bits.netbeans.org/11.0/javadoc
 
 ////
 NOTE: Using https below is highly recommended.
 ////
-Officially, it is important that you link:https://www.apache.org/dyn/closer.cgi#verify[verify the integrity] of the downloaded files using the PGP signatures (.asc file) or a hash (.sha512 files).  The PGP keys used to sign this release are available link:https://www.apache.org/dist/incubator/netbeans/KEYS[here].
+Officially, it is important that you link:https://www.apache.org/dyn/closer.cgi#verify[verify the integrity] of the downloaded files using the PGP signatures (.asc file) or a hash (.sha512 files).  The PGP keys used to sign this release are available link:https://downloads.apache.org/incubator/netbeans/KEYS[here].
 
 TIP: Installers have been introduced for the first time in the next release, in Apache NetBeans 11.1. Go link:https://netbeans.apache.org/download/nb111/nb111.html[here] for details.
 
