JDK 14 and nb-javac note

--- a/netbeans.apache.org/src/content/download/nb113/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb113/index.asciidoc
@@ -91,6 +91,8 @@ tasks.withType(JavaCompile).each {
 run.jvmArgs(['--enable-preview'])
 ----
 
+TIP: To use JDK 14 features in the Java Editor, you'll need to run Apache NetBeans 11.3 itself on JDK 14, since the javac  that Apache NetBeans runs on is used by the editor for features such as syntax coloring. Also, make sure to uninstall nb-javac, if it is installed, so that the javac from JDK 14 will be used for these reasons.
+
 Other enhancements in the Java area.
 
 - link:https://openjdk.java.net/jeps/330[JEP 330]: Launch Single-File Source-Code Programs -- single Java source files can be created, outside of projects, in the Favorites window, and they can be run and debugged, if NetBeans is running on JDK 11 or later.
