--- a/netbeans.apache.org/src/content/download/nb113/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb113/index.asciidoc
@@ -91,7 +91,7 @@ tasks.withType(JavaCompile).each {
 run.jvmArgs(['--enable-preview'])
 ----
 
-TIP: To use JDK 14 features in the Java Editor, you'll need to run Apache NetBeans 11.3 itself on JDK 14, since the javac  that Apache NetBeans runs on is used by the editor for features such as syntax coloring. Also, make sure to uninstall nb-javac, if it is installed, so that the javac from JDK 14 will be used for these reasons.
+TIP: To use JDK 14 features, such as the new "record" keyword, in the Java Editor, you'll need to run Apache NetBeans 11.3 itself on JDK 14, so that Apache NetBeans will use the Java compiler from JDK 14 for code recognition, syntax coloring, etc. Also, make sure to uninstall nb-javac, if it is installed, and not to install and use it, when prompted, so that the Java compiler from JDK 14 will be used, rather than nb-javac, which does not support JDK 14.
 
 Other enhancements in the Java area.
 
