Linking in NetBeans Platform trail

--- a/netbeans.apache.org/src/content/help/index.asciidoc
+++ b/netbeans.apache.org/src/content/help/index.asciidoc
@@ -36,6 +36,8 @@ The following learning trails provide you with everything you need to know to de
 
 - link:/kb/docs/ide/index.html[Integration with External Tools and Services]
 
+- link:/kb/docs/platform/index.html[NetBeans Platform]
+
 NOTE: The learning trails, tutorials, and related documentation are works in progress, incomplete, and being reviewed: link:https://issues.apache.org/jira/browse/NETBEANS-1867[NETBEANS-1867]. See link:http://netbeans.apache.org/kb/docs/contributing.html[our documentation contribution guidelines] to learn how you can help us.
 
 == Other resources
