high level content in 12.0 index page

--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -31,4 +31,14 @@
 :experimental:
 :linkattrs:
 
-Welcome to Apache NetBeans 12.0.
+Welcome to Apache NetBeans 12.0 is the LTS release for 2020 of the link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[Apache NetBeans quarterly release cycle].
+
+TIP: The LTS release of the Apache NetBeans 12 cycle is Apache NetBeans 12.0, which consolidates the feature releases 11.1, 11.2, and 11.3. Feature releases have not been tested as heavily as the LTS release, which passes through the NetCAT Community Acceptance process and is therefore the annual major release.
+
+link:/download/nb120/nb120.html[Download, role="button success"]
+
+Below are the highlights of Apache NetBeans 12.0, for a full list, see the link:https://cwiki.apache.org/confluence/display/NETBEANS/Apache+NetBeans+12.0[Apache NetBeans 12.0 Wiki].
+
+== Release Drivers
+
+
