Removing Java 14 specific language for general new Java language

--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -43,7 +43,7 @@ Below are the highlights of Apache NetBeans 12.0, for a full list, see the link:
 
 === Java
 
-The highlights of enhancements in the Java area are focused on support for JDK 14.
+The highlights of enhancements in the Java area are focused on support for the latest Java language features.
 
 - link:https://openjdk.java.net/jeps/359[JEP 359]: Records (Preview Feature) -- syntax coloring for the new "record" keyword; Navigator shows equals, hashCode, toString, etc; and formatting support for records.
 
@@ -91,7 +91,7 @@ tasks.withType(JavaCompile).each {
 run.jvmArgs(['--enable-preview'])
 ----
 
-TIP: To use JDK 14 features, such as the new "record" keyword, in the Java Editor, you'll need to run Apache NetBeans itself on JDK 14, so that Apache NetBeans will use the Java compiler from JDK 14 for code recognition, syntax coloring, etc. Also, make sure to uninstall nb-javac, if it is installed, and not to install and use it, when prompted, so that the Java compiler from JDK 14 will be used, rather than nb-javac, which does not support JDK 14.
+TIP: To use the latest Java language features, such as the new "record" keyword, in the Java Editor, you'll need to run Apache NetBeans itself on the JDK that provides those features, so that Apache NetBeans will use the Java compiler from the JDK it runs on for code recognition, syntax coloring, etc. Also, make sure to uninstall nb-javac, if it is installed, and not to install and use it, when prompted, so that the Java compiler from JDK will be used, rather than nb-javac, which does not support the latest Java language features and is mandatory only when you run Apache NetBeans on JDK 8.
 
 Other enhancements in the Java area.
 
