Full content for download page

--- a/netbeans.apache.org/src/content/download/nb120/nb120.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/nb120.asciidoc
@@ -33,7 +33,7 @@ for important requirements for download pages for Apache projects.
 :toc-title:
 :icons: font
 
-Apache NetBeans 12.0 was released on...
+Apache NetBeans 12.0 was released on June 4, 2020.
 See link:/download/nb120/index.html[Apache NetBeans 12.0 Features] for a full list of features.
 
 ////
@@ -42,3 +42,49 @@ NOTE: It's mandatory to link against https://www.apache.org for the sums & keys.
 NOTE: It's NOT recommended to link to github.
 ////
 Apache NetBeans 12.0 is available for download from your closest Apache mirror.
+
+- Binaries: 
+link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.0/netbeans-12.0-bin.zip[netbeans-12.0-bin.zip] (link:https://downloads.apache.org/netbeans/netbeans/12.0/netbeans-12.0-bin.zip.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.0/netbeans-12.0-bin.zip.asc[PGP ASC])
+
+- Source: link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.0/netbeans-12.0-source.zip[netbeans-12.0-source.zip] 
+(link:https://downloads.apache.org/netbeans/netbeans/12.0/netbeans-12.0-source.zip.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.0/netbeans-12.0-source.zip.asc[PGP ASC])
+
+- Installers: 
+
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.0/Apache-NetBeans-12.0-bin-windows-x64.exe[Apache-NetBeans-12.0-bin-windows-x64.exe] (link:https://downloads.apache.org/netbeans/netbeans/12.0/Apache-NetBeans-12.0-bin-windows-x64.exe.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.0/Apache-NetBeans-12.0-bin-windows-x64.exe.asc[PGP ASC])
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.0/Apache-NetBeans-12.0-bin-linux-x64.sh[Apache-NetBeans-12.0-bin-linux-x64.sh] (link:https://downloads.apache.org/netbeans/netbeans/12.0/Apache-NetBeans-12.0-bin-linux-x64.sh.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.0/Apache-NetBeans-12.0-bin-linux-x64.sh.asc[PGP ASC])
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.0/Apache-NetBeans-12.0-bin-macosx.dmg[Apache-NetBeans-12.0-bin-macosx.dmg] (link:https://downloads.apache.org/netbeans/netbeans/12.0/Apache-NetBeans-12.0-bin-macosx.dmg.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.0/Apache-NetBeans-12.0-bin-macosx.dmg.asc[PGP ASC])
+
+- Javadoc for this release is available at https://bits.netbeans.org/12.0/javadoc
+
+TIP: The installers will NOT run under JDK 14 because usage is made of the Pack200 Tools and API, for packing and unpacking, which is removed in JDK 14, see link:https://openjdk.java.net/jeps/367[JEP 367]. 
+
+////
+NOTE: Using https below is highly recommended.
+////
+Officially, it is important that you link:https://www.apache.org/dyn/closer.cgi#verify[verify the integrity]
+of the downloaded files using the PGP signatures (.asc file) or a hash (.sha512 files).
+The PGP signatures should be matched against the link:https://downloads.apache.org/netbeans/KEYS[KEYS] file which contains the PGP keys used to sign this release.
+
+Apache NetBeans can also be installed as a self-contained link:https://snapcraft.io/netbeans[snap package] on Linux.
+
+== Deployment platforms
+
+Apache NetBeans 12.0 runs on the JDK LTS releases 8 and 11, as well as on JDK 14, i.e., the current JDK release at the time of this NetBeans release.
+
+== Community approval
+
+As in any other Apache Project, the Apache NetBeans Community approved this release
+through the following voting processes in our link:/community/mailing-lists.html[mailing lists]:
+
+- link:https://lists.apache.org/thread.html/r0dd18c0214939423e84c429d492b38d938acc3063dfd39252a8a03ed%40%3Cdev.netbeans.apache.org%3E[PMC vote]
+- link:https://lists.apache.org/thread.html/r963280a9406f4310cc8798d63f901674656794f497e04559cc32f53b%40%3Cdev.netbeans.apache.org%3E[PMC vote result]
+
+== Earlier releases
+
+Please visit the link:/download/index.html[Apache NetBeans Download page] for further details.
