--- a/netbeans.apache.org/src/content/download/nb120/nb120.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/nb120.asciidoc
@@ -83,6 +83,10 @@ through the following voting processes in our link:/community/mailing-lists.html
 - link:https://lists.apache.org/thread.html/r0dd18c0214939423e84c429d492b38d938acc3063dfd39252a8a03ed%40%3Cdev.netbeans.apache.org%3E[PMC vote]
 - link:https://lists.apache.org/thread.html/r963280a9406f4310cc8798d63f901674656794f497e04559cc32f53b%40%3Cdev.netbeans.apache.org%3E[PMC vote result]
 
+Because 12.0 is an LTS release, the link:https://cwiki.apache.org/confluence/display/NETBEANS/NetCAT+FAQ[NetCAT community acceptance process] is applicable, with the results of NetCAT 12.0 available here:
+
+- link:https://cwiki.apache.org/confluence/display/NETBEANS/Results+from+Apache+NetBeans+IDE+12.0+Community+Acceptance+survey[Results from Apache NetBeans IDE 12.0 Community Acceptance survey]
+
 == Earlier releases
 
 Please visit the link:/download/index.html[Apache NetBeans Download page] for further details.
