Tweaks to download page

--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -31,11 +31,10 @@ for important requirements for download pages for Apache projects.
 :description: Apache NetBeans Releases Page
 :linkattrs:
 
-Apache NetBeans is released four times a year. Our May release is a
-long-term support (LTS) release that benefits from our famous NetCAT
-community testing process, and will remain available and supported for
-a year.  Our other quarterly releases provide early access to new
-features. See link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[full release schedule].
+Apache NetBeans is released four times a year. For details, see link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[full release schedule].
+
+TIP: Our annual May/June release is a
+long-term support (LTS) release that benefits from our link:https://cwiki.apache.org/confluence/display/NETBEANS/NetCAT+FAQ[NetCAT community testing process], and remains available and supported for a year.  Our other quarterly releases provide early access to new features, which are tested and consolidated in the subsequent LTS release.
 
 == Apache NetBeans 11 feature update 3 (NB 11.3)
 
