--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -28,7 +28,11 @@ for important requirements for download pages for Apache projects.
 :jbake-tags: download
 :jbake-status: published
 :keywords: Apache NetBeans releases
+:icons: font
 :description: Apache NetBeans Releases Page
+:syntax: true
+:source-highlighter: pygments
+:experimental:
 :linkattrs:
 
 Apache NetBeans is released four times a year. For details, see link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[full release schedule].
