Structure of 12.0 features page

--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -39,9 +39,9 @@ link:/download/nb120/nb120.html[Download, role="button success"]
 
 Below are the highlights of Apache NetBeans 12.0, for a full list, see the link:https://cwiki.apache.org/confluence/display/NETBEANS/Apache+NetBeans+12.0[Apache NetBeans 12.0 Wiki].
 
-== Release Drivers
+== Java
 
-=== Java
+=== Java Language Features
 
 The highlights of enhancements in the Java area are focused on support for the latest Java language features.
 
@@ -98,4 +98,25 @@ Other enhancements in the Java area.
 - link:https://openjdk.java.net/jeps/330[JEP 330]: Launch Single-File Source-Code Programs -- single Java source files can be created, outside of projects, in the Favorites window, and they can be run and debugged, if NetBeans is running on JDK 11 or later.
  
 - link:https://openjdk.java.net/jeps/355[JEP 355]: Text Blocks (Preview) -- in addition to the Text Block features introduced to the Java Editor in previous releases, a new Java editor hint has been introduced for reverting from Text Block to String. 
+
+=== JavaFX
+
+=== Java EE
+
+=== Java Build Systems
+
+==== Maven
+
+==== Gradle
+
+== PHP
+
+== C/C++
+
+== Miscellaneous
+
+
+
+
+
 
