Miscellaneous section content

--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -115,8 +115,8 @@ Other enhancements in the Java area.
 
 == Miscellaneous
 
+- Fixed link:https://github.com/apache/netbeans/pull/2076[incorrectly positioned line-width marker] (i.e., shown at 82 characters instead of 80 characters), and inaccurate tab alignments. This bug existed at certain editor zoom levels on Windows, Linux, and MacOS, including on non-HiDPI screens.
 
-
-
+- Fixed link:https://github.com/apache/netbeans/pull/2025[clipped file names] in "Projects" pane on Windows on HiDPI screens.
 
 
