--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -41,9 +41,11 @@ Below are the highlights of Apache NetBeans 12.0, for a full list, see the link:
 
 == Java
 
+The highlights of the enhancements in the Java area are focused on support for the latest Java language features.
+
 === Java Language Features
 
-The highlights of enhancements in the Java area are focused on support for the latest Java language features.
+==== Java 14
 
 - link:https://openjdk.java.net/jeps/359[JEP 359]: Records (Preview Feature) -- syntax coloring for the new "record" keyword; Navigator shows equals, hashCode, toString, etc; and formatting support for records.
 
@@ -117,6 +119,6 @@ Other enhancements in the Java area.
 
 - Fixed link:https://github.com/apache/netbeans/pull/2076[incorrectly positioned line-width marker] (i.e., shown at 82 characters instead of 80 characters), and inaccurate tab alignments. This bug existed at certain editor zoom levels on Windows, Linux, and MacOS, including on non-HiDPI screens.
 
-- Fixed link:https://github.com/apache/netbeans/pull/2025[clipped file names] in "Projects" pane on Windows on HiDPI screens.
+- Fixed link:https://github.com/apache/netbeans/pull/2025[clipped file names] in Projects window and Files window on Windows on HiDPI screens.
 
 
