--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -61,6 +61,16 @@ image::record-keyword.png[role="left", link="record-keyword.png"]
 image::ezgif.com-video-to-gif.gif[role="left", link="ezgif.com-video-to-gif.gif"]
 --  
 
+==== Java 13
+
+link:https://openjdk.java.net/jeps/355[JEP 355]: Text Blocks (Preview) -- in addition to the Text Block features introduced to the Java Editor in previous releases, a new Java editor hint has been introduced for reverting from Text Block to String. 
+
+==== Java 11
+ 
+link:https://openjdk.java.net/jeps/330[JEP 330]: Launch Single-File Source-Code Programs -- single Java source files can be created, outside of projects, in the Favorites window, and they can be run and debugged, if NetBeans is running on JDK 11 or later.
+
+==== Enablement of Java Preview Features
+
 TIP: link:https://openjdk.java.net/jeps/12[JEP 12] provides for a preview language or VM feature, which "is a new feature of the Java SE Platform that is fully specified, fully implemented, and yet impermanent. It is available in a JDK feature release to provoke developer feedback based on real world use; this may lead to it becoming permanent in a future Java SE Platform".
 
 Preview features can only be used if the Java compiler's `--enable-preview` flag is set, as shown below for Maven. 
@@ -94,12 +104,6 @@ run.jvmArgs(['--enable-preview'])
 ----
 
 TIP: To use the latest Java language features, such as the new "record" keyword, in the Java Editor, you'll need to run Apache NetBeans itself on the JDK that provides those features, so that Apache NetBeans will use the Java compiler from the JDK it runs on for code recognition, syntax coloring, etc. In these scenarios, make sure to uninstall nb-javac, if it is installed, and not to install and use it, when prompted, so that the Java compiler from JDK will be used, rather than nb-javac, which does not support the latest Java language features and is mandatory only when you run Apache NetBeans on JDK 8.
-
-Other enhancements in the Java area.
-
-- link:https://openjdk.java.net/jeps/330[JEP 330]: Launch Single-File Source-Code Programs -- single Java source files can be created, outside of projects, in the Favorites window, and they can be run and debugged, if NetBeans is running on JDK 11 or later.
- 
-- link:https://openjdk.java.net/jeps/355[JEP 355]: Text Blocks (Preview) -- in addition to the Text Block features introduced to the Java Editor in previous releases, a new Java editor hint has been introduced for reverting from Text Block to String. 
 
 === JavaFX
 
